--- a/PaginaPrueba.html
+++ b/PaginaPrueba.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
 	Hola mundo.
         El archivo es editable
+        <html>
+                <head>
+                        <title>Primer Entregable</title>
+                </head>
+                <body>
+                        <header>
+                                <h1>Nombre del grupo</h1>
+                        </header>
+                        <main>
+                                <p>Aqui van los nombres de las personas del grupo</p>
+                        </main>
+                </body>
+        </html>
 </html>
