Se agrega nombre Miguel Carvajal

--- a/PaginaPrueba.html
+++ b/PaginaPrueba.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	Hola mundo.
         El archivo es editable
-        <html>
+        
                 <head>
                         <title>Primer Entregable</title>
                 </head>
@@ -12,6 +12,7 @@
                         <main>
                                 <p>Aqui van los nombres de las personas del grupo</p>
                         </main>
+                        <h3>Miguel Angel Carvajal</h3>
                 </body>
-        </html>
+        
 </html>
