se modifia APODO por ROL en el equipo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			<table border="6" style="background: #2982D0">
 				<tr>
 					<td><font face="Helvetica" size="5" color="white"><center> Nombre</center></font></center></td>
-					<td><font face="Helvetica" size="5" color="white"><center> Apodo</center></font></td>
+					<td><font face="Helvetica" size="5" color="white"><center> Rol</center></font></td>
 				</tr>
 				<tr>
 					<td><font face="Helvetica" size="5" color="#99FAF7"><center>Eduardo Alonso Ojeda</center></font></td>
