se elimina apodo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</tr>
 				<tr>
 					<td><font face="Helvetica" size="5" color="#32CD32"><center>Miguel Angel Carvajal</font></td>
-					<td><font face="Helvetica" size="5" color="#32CD32"><center>Mike</center></font></td>
+					<td><font face="Helvetica" size="5" color="#32CD32"><center> </center></font></td>
 				</tr>
 			</table>
 		</center>
