--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
      </head>
      
-    <title>Primer Entregable</title>
+    <title>MEJCD</title>
      
 	<body>
-		<center><h1>Nombre del grupo</h1>
+		<center><font face="Helvetica" size="20" color="#1D66E0"><b>MEJCD CORP</b></font>
 			<table border="6" style="background: #2982D0">
 				<tr>
 					<td><font face="Helvetica" size="5" color="white"><center> Nombre</center></font></center></td>
