se agrega carpeta de documentacion, se crea diagrama de casos de uso y diagrama entidad relacion para verificacion

--- a/index.html
+++ b/index.html
@@ -9,30 +9,30 @@
      
 	<body>
 		<center><font face="Helvetica" size="20" color="#1D66E0"><b>MEJCD CORP</b></font>
-			<table border="6" style="background: #2982D0">
+			<table border="6" style="background: #2982D0" color="red">
 				<tr>
 					<td><font face="Helvetica" size="5" color="white"><center> Nombre</center></font></center></td>
 					<td><font face="Helvetica" size="5" color="white"><center> Rol</center></font></td>
 				</tr>
 				<tr>
-					<td><font face="Helvetica" size="5" color="#99FAF7"><center>Eduardo Alonso Ojeda</center></font></td>
-					<td><font face="Helvetica" size="5" color="#99FAF7"><center> </center></font></td>
+					<td><font face="Helvetica" size="5" color="black"><center>Eduardo Alonso Ojeda</center></font></td>
+					<td><font face="Helvetica" size="5" color="black"><center>Product Owner</center></font></td>
 				</tr>
 				<tr>
-					<td><font face="Helvetica" size="5" color="yellow"><center>Jorge Luis Patiño</center></font></td>
-					<td><font face="Helvetica" size="5" color="yellow"><center> </center></font></td>
+					<td><font face="Helvetica" size="5" color="black"><center>Jorge Luis Patiño</center></font></td>
+					<td><font face="Helvetica" size="5" color="black"><center>Team</center></font></td>
 				</tr>
 				<tr>
-					<td><font face="Helvetica" size="5" color="white"><center>Diego Andres Alvarado</center></font></td>
-					<td><font face="Helvetica" size="5" color="white"><center> </center></font></td>
+					<td><font face="Helvetica" size="5" color="black"><center>Diego Andres Alvarado</center></font></td>
+					<td><font face="Helvetica" size="5" color="black"><center>Team</center></font></td>
 				</tr>
 				<tr>
 					<td><font face="Helvetica" size="5" color="black"><center>Cesar Augusto Barbosa</center></font></td>
-					<td><font face="Helvetica" size="5" color="black"><center> </center></font></td>
+					<td><font face="Helvetica" size="5" color="black"><center>Team</center></font></td>
 				</tr>
 				<tr>
-					<td><font face="Helvetica" size="5" color="#32CD32"><center>Miguel Angel Carvajal</font></td>
-					<td><font face="Helvetica" size="5" color="#32CD32"><center> </center></font></td>
+					<td><font face="Helvetica" size="5" color="black"><center>Miguel Angel Carvajal</font></td>
+					<td><font face="Helvetica" size="5" color="black"><center>Scrum Master</center></font></td>
 				</tr>
 			</table>
 		</center>
