se agrega url del repositorio

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      
 	<body>
 		<center><font face="Helvetica" size="20" color="#1D66E0"><b>MEJCD CORP</b></font>
-			<table border="6" style="background: #2982D0" color="red">
+			<table border="6" style="background: #2982D0">
 				<tr>
 					<td><font face="Helvetica" size="5" color="white"><center> Nombre</center></font></center></td>
 					<td><font face="Helvetica" size="5" color="white"><center> Rol</center></font></td>
@@ -35,6 +35,7 @@
 					<td><font face="Helvetica" size="5" color="black"><center>Scrum Master</center></font></td>
 				</tr>
 			</table>
+			<center><a href="https://github.com/miancarvajal/misiontic5.git" target="_blank"><font face="Helvetica" size="5" color="#1F7B14" ><b>Repositorio: https://github.com/miancarvajal/misiontic5.git</b></font>
 		</center>
 	</body>
 </html>
