--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>MEJCD</title>
      
 	<body>
-		<center><font face="Helvetica" size="20" color="#1D66E0"><b>MEJCD CORP</b></font>
+		<center><font face="Helvetica" size="19" color="#1D66E0"><b>MEJCD CORP</b></font>
 			<table border="6" style="background: #2982D0">
 				<tr>
 					<td><font face="Helvetica" size="5" color="white"><center> Nombre</center></font></center></td>
@@ -35,7 +35,7 @@
 					<td><font face="Helvetica" size="5" color="black"><center>Scrum Master</center></font></td>
 				</tr>
 			</table>
-			<center><a href="https://github.com/miancarvajal/misiontic5.git" target="_blank"><font face="Helvetica" size="5" color="#1F7B14" ><b>Repositorio: https://github.com/miancarvajal/misiontic5.git</b></font>
+			<a href="https://github.com/miancarvajal/misiontic5.git" target="_blank"><font face="Helvetica" size="5" color="#1F7B14" ><b>Repositorio: https://github.com/miancarvajal/misiontic5.git</b></font>
 		</center>
 	</body>
 </html>
