se envia mensaje de prueba superada

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 					<td><font face="Helvetica" size="5" color="black"><center>Scrum Master</center></font></td>
 				</tr>
 			</table>
-			<a href="https://github.com/miancarvajal/misiontic5.git" target="_blank"><font face="Helvetica" size="5" color="#1F7B14" ><b>Repositorio: https://github.com/miancarvajal/misiontic5.git</b></font>
+			<a href="https://github.com/miancarvajal/misiontic5.git" target="_blank"><font face="Helvetica" size="5" color="#1F7B14" ><b>Repositorio: https://github.com/miancarvajal/misiontic5.git</b></font></a>
 		</center>
+		<h2>prueba superada</h2>
 	</body>
 </html>
