se agrega carpeta de imagenes y se agrega imagen en pagina de pruebas

--- a/PaginaPrueba.html
+++ b/PaginaPrueba.html
@@ -8,8 +8,11 @@
     <title>MEJCD</title>
      
 	<body>
-		<form>
-                        <center><font face="Helvetica" size="19" color="#1D66E0"><b>MEJCD CORP</b></font>
+		<center>
+			<font face="Helvetica" size="19" color="#1D66E0"><b>MEJCD CORP</b></font><br>
+                        <img src="Imagenes/evolucion.jpg" width="50%" height="25%">
+		
+		<form>                    
                                 <table border="20" style="background: #2982D0">
                                         <tr>
                                                 <td><font face="Helvetica" size="5" color="black"><center> Nombres:</center></font></center></td>
