--- a/Sprint2.html
+++ b/Sprint2.html
@@ -3,13 +3,16 @@
 			<meta charset="UTF-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+                        <link rel="stylesheet" href="Estilos/estilos.css" />
      </head>
      
     <title>MEJCD</title>
      
 	<body>
 		<center>
-			<font face="Helvetica" size="19" color="#1D66E0"><b>MEJCD CORP</b></font><br>
+                        <div class="header"encabezado
+			<font face="Helvetica" size="19" color="#1D66E0"><h1>MEJCD CORP</h1></font><br>
+                </div>
             <img src="Imagenes/evolucion.jpg" width="50%" height="25%">
 		
 		<form name = "formulario" id="formulario" method="POST" action="">                    
