--- a/Sprint2.html
+++ b/Sprint2.html
@@ -11,7 +11,7 @@
 	<body>
 		<center>
                         <div class="header"encabezado
-			<font face="Helvetica" size="19" color="#1D66E0"><h1>MEJCD CORP</h1></font><br>
+			<font face="Helvetica" size="19" color="#1D66E0"><>MEJCD CORP</b></font><br>
                 </div>
             <img src="Imagenes/evolucion.jpg" width="50%" height="25%">
 		
