se ajustan etiquetas y se crean stilos

--- a/Sprint3.html
+++ b/Sprint3.html
@@ -9,12 +9,14 @@
     <title>MEJCD</title>
      
 	<body>
-		<center>
-            <div class="header"encabezado
-			<font face="Helvetica" size="19" color="#1D66E0"><h1>MEJCD CORP</h1></font><br>
-            </div>
-            <img src="Imagenes/evolucion.jpg" width="50%" height="25%">
-            
+		<div class="header">
+			<h3>MEJCD CORP</h3>
+        </div>
+        <div class="nav">
+		<img src="Imagenes/evolucion.jpg" width="35%" height="15%">
+		</div>		
+        <section class="forms">
+		<div class="body">    
 		<form name = "formulario" id="formulario" method="POST" action="">      
 			<div class="container">
 				<div class="row">
@@ -72,6 +74,7 @@
 				</div>
 			</div>
          </form>
-		</center>
+		</div>
+	</section>
       </body>
 </html>
