--- a/Sprint4.html
+++ b/Sprint4.html
@@ -5,6 +5,13 @@
 			<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
             <link rel="stylesheet" href="Estilos/estilos.css" />
             <script src="Js/modelo.js"></script>
+            <script src="https://www.gstatic.com/charts/loader.js"></script>
+            <script>
+				google.charts.load('current', {packages: ['corechart']});
+				google.charts.load('current', {'packages':['gauge']});
+				google.charts.setOnLoadCallback(dibujarGraficoBarras);
+				google.charts.setOnLoadCallback(dibujarGraficoBarras2);
+            </script>
      </head>
      
     <title>MEJCD</title>
@@ -69,5 +76,13 @@
          </form>
 		</div>
 	</section>
+	
+	<div class="container">
+		<div id="graficoBarras"></div>
+		<div id="graficoBarras2"></div>
+	<!--	<div id="tabla"> 
+			<input type="button" value="Genera una tabla" onclick="generar_tabla()">
+		</div>-->
+	</div>
       </body>
 </html>
